--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,16 @@
     "bootstrap": "^4.3.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
+    "install": "^0.13.0",
     "material-ui-color-picker": "^3.5.0",
     "materialize-css": "^1.0.0",
+    "npm": "^6.14.5",
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
     "react-color": "^2.18.1",
     "react-dom": "^16.8.6",
     "react-draggable": "^4.3.1",
+    "react-grid-layout": "^0.18.3",
     "react-materialize": "^3.8.3",
     "react-resizable": "^1.10.1",
     "react-resize-panel": "^0.3.5",
