--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.3.1",
     "bootstrap": "^4.3.1",
+    "downloadjs": "^1.4.7",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "html2canvas": "^1.0.0-rc.5",
