--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.3.1",
     "bootstrap": "^4.3.1",
     "downloadjs": "^1.4.7",
-    "graphql": "^14.2.1",
+    "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
     "html2canvas": "^1.0.0-rc.5",
     "install": "^0.13.0",
