--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,11 @@
     "jade": "~1.11.0",
     "mongoose": "^5.5.2",
     "morgan": "~1.9.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-plus-token": "^2.1.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
